--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,30 @@
 
+@Book{		  reinhart2016concepts,
+  author	= {Reinhart, Tanya},
+  pages		= {262},
+  publisher	= {MIT Press},
+  title		= {Concepts, Syntax, and Their Interface},
+  year		= {2016}
+}
+
+@Book{		  ludlow2014living,
+  author	= {Ludlow, Peter},
+  pages		= {189},
+  publisher	= {Oxford University Press, USA},
+  title		= {Living Words},
+  year		= {2014}
+}
+
+@Article{	  larson1988implicit,
+  author	= {Larson, Richard K.},
+  journal	= {Linguistics and Philosophy},
+  number	= {2},
+  pages		= {169--201},
+  title		= {Implicit arguments in situation semantics},
+  volume	= {11},
+  year		= {1988}
+}
+
 @Book{		  francez2017variation,
   author	= {Francez, Itamar and Koontz-Garboden, Andrew},
   publisher	= {Oxford University Press},
