--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,25 @@
 
+@Article{	  pearson2015ewe,
+  author	= {Pearson, Hazel},
+  journal	= {Natural Language Semantics},
+  number	= {2},
+  pages		= {77--118},
+  title		= {The interpretation of the logophoric pronoun in Ewe},
+  volume	= {23},
+  year		= {2015}
+}
+
+@Article{	  enguehard2021lexicon,
+  author	= {Enguehard, {\'E}mile and Spector, Benjamin},
+  journal	= {Semantics and Pragmatics},
+  number	= {5},
+  title		= {Explaining gaps in the logical lexicon of natural
+		  languages: A decision-theoretic perspective on the square
+		  of Aristotle},
+  volume	= {14},
+  year		= {2021}
+}
+
 @Book{		  reinhart2016concepts,
   author	= {Reinhart, Tanya},
   pages		= {262},
