--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,88 @@
 
+@Article{	  anthony2016experience,
+  author	= {Anthony, Alex},
+  journal	= {Inquiry},
+  number	= {6},
+  pages		= {686--722},
+  title		= {Experience, evaluation and faultless disagreement},
+  volume	= {59},
+  year		= {2016}
+}
+
+@Article{	  anand2018acquaintance,
+  author	= {Anand, Pranav and Korotkova, Natasha},
+  journal	= {ZAS Papers in Linguistics},
+  pages		= {55--72},
+  title		= {Acquaintance content and obviation},
+  volume	= {60},
+  year		= {2018}
+}
+
+@Article{	  dinges2021taste,
+  author	= {Dinges, Alexander and Zakkou, Julia},
+  journal	= {Philosophical Studies},
+  number	= {4},
+  pages		= {1183--1206},
+  title		= {Taste, traits, and tendencies},
+  volume	= {178},
+  year		= {2021}
+}
+
+@Article{	  kaiser2017,
+  author	= {Kaiser, Elsi and Herron Lee, Jamie},
+  journal	= {Semantics and Linguistic Theory},
+  pages		= {323},
+  title		= {Experience matters: A psycholinguistic investigation of
+		  predicates of personal taste},
+  volume	= {27},
+  year		= {2017}
+}
+
+@Book{		  castroviejo2018,
+  address	= {Cham},
+  editor	= {Castroviejo, Elena and McNally, Louise and Weidman
+		  Sassoon, Galit},
+  publisher	= {Springer International Publishing},
+  title		= {The Semantics of Gradability, Vagueness, and Scale
+		  Structure},
+  year		= {2018}
+}
+
+@InBook{	  solt2018,
+  address	= {Cham},
+  author	= {Solt, Stephanie},
+  booktitle	= {The Semantics of Gradability, Vagueness, and Scale
+		  Structure: Language, Cognition, and Mind},
+  editor	= {Castroviejo, Elena and McNally, Louise and Sassoon, Galit
+		  W.},
+  pages		= {59-91},
+  publisher	= {Springer International Publishing},
+  title		= {Multidimensionality, Subjectivity and Scales: Experimental
+		  Evidence},
+  year		= {2018}
+}
+
+@Article{	  minkoff2004logophoric,
+  author	= {Minkoff, Seth A.},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {485--494},
+  title		= {Consciousness, Backward Coreference, and Logophoricity},
+  volume	= {35},
+  year		= {2004}
+}
+
+@InBook{	  chierchia1989dese,
+  address	= {Berlin, Boston},
+  author	= {Chierchia, Gennaro},
+  booktitle	= {Semantics and Contextual Expression},
+  editor	= {Bartsch, R. and Benthem, J. van and Emde Boas, P. van},
+  pages		= {1-32},
+  publisher	= {De Gruyter},
+  title		= {Anaphora and Attitudes De Se},
+  year		= {1989}
+}
+
 @Article{	  pearson2015ewe,
   author	= {Pearson, Hazel},
   journal	= {Natural Language Semantics},
