--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -39498,8 +39498,7 @@
   journal	= {Semantics and Pragmatics},
   number	= {0},
   pages		= {13:1--45},
-  title		= {Moral asymmetries and the semantics of
-		  {\textless}em{\textgreater}many{\textless}/em{\textgreater}},
+  title		= {Moral asymmetries and the semantics of many},
   volume	= {8},
   year		= {2015},
   doi		= {10.3765/sp.8.13}
@@ -48195,9 +48194,7 @@
   journal	= {Natural Language Semantics},
   number	= {1},
   pages		= {51--83},
-  title		= {A revised, gradability-based semantics for
-		  {\textless}{Emphasis}
-		  {Type}="{Italic}"{\textgreater}even{\textless}/{Emphasis}{\textgreater}},
+  title		= {A revised, gradability-based semantics for even},
   volume	= {26},
   year		= {2018},
   doi		= {10.1007/s11050-017-9140-0}
