--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@Article{	  berman1987,
+  author	= {Berman, Stephen},
+  journal	= {University of Massachusetts Occasional Papers in
+		  Linguistics},
+  number	= {2},
+  title		= {Situation-based Semantics for Adverbs of Quantification},
+  volume	= {13},
+  year		= {1987}
+}
+
+@Article{	  schutze2009,
+  author	= {Sch{\"u}tze, Carson T.},
+  journal	= {Zeitschrift f{\"u}r Sprachwissenschaft},
+  number	= {1},
+  pages		= {151--156},
+  title		= {Web searches should supplement judgements, not supplant
+		  them},
+  volume	= {28},
+  year		= {2009}
+}
+
+@Book{		  schutze2019empirical,
+  address	= {Berlin},
+  author	= {Sch{\"u}tze, Carson T.},
+  publisher	= {Language Science Press},
+  title		= {The empirical base of linguistics: Grammaticality
+		  judgments and linguistic methodology},
+  year		= {2019}
+}
+
 @Article{	  anthony2016experience,
   author	= {Anthony, Alex},
   journal	= {Inquiry},
