--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -14231,7 +14231,7 @@
   booktitle	= {The Nature of the Word - Essays in Honor of Paul
 		  Ki{\`a}rsky},
   publisher	= {The {MIT} Press},
-  title		= {{"Elsewhere"} in Gender Resolution},
+  title		= {{Elsewhere} in Gender Resolution},
   year		= {2005}
 }
 
