--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  corver2021adverbial,
+  author	= {Corver, Norbert},
+  journal	= {Natural Language & Linguistic Theory},
+  title		= {Adverbial -s as last resort},
+  year		= {2021}
+}
+
 @Article{	  berman1987,
   author	= {Berman, Stephen},
   journal	= {University of Massachusetts Occasional Papers in
