--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,7 +1,7 @@
 
 @Article{	  corver2021adverbial,
   author	= {Corver, Norbert},
-  journal	= {Natural Language & Linguistic Theory},
+  journal	= {Natural Language \& Linguistic Theory},
   title		= {Adverbial -s as last resort},
   year		= {2021}
 }
