--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,87 @@
 
+@Article{	  fodor1999,
+  author	= {Fodor, Jerry and Lepore, Ernie},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {445--453},
+  title		= {Impossible Words},
+  volume	= {30},
+  year		= {1999}
+}
+
+@Article{	  hale1999impossible,
+  author	= {Hale, Ken and Keyser, Samuel Jay},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {453--466},
+  title		= {A Response to Fodor and Lepore, Impossible Words?},
+  volume	= {30},
+  year		= {1999}
+}
+
+@Book{		  lopez2009information,
+  address	= {Oxford},
+  author	= {L{\'o}pez, Luis},
+  pages		= {308},
+  publisher	= {OUP},
+  title		= {A Derivational Syntax for Information Structure},
+  year		= {2009}
+}
+
+@Book{		  ernst2002adjuncts,
+  author	= {Ernst, Thomas and Ernst, Thomas Boyden and Thomas, Ernst},
+  pages		= {555},
+  title		= {The Syntax of Adjuncts},
+  year		= {2002}
+}
+
+@Article{	  rizzi2013,
+  author	= {Rizzi, Luigi},
+  journal	= {Probus},
+  number	= {1},
+  pages		= {197--226},
+  title		= {Notes on cartography and further explanation},
+  volume	= {25},
+  year		= {2013}
+}
+
+@Article{	  crain2012acquisition,
+  author	= {Crain, Stephen and Thornton, Rosalynd},
+  journal	= {Wiley Interdiscip Rev Cogn Sci},
+  number	= {2},
+  pages		= {185--203},
+  title		= {Syntax acquisition},
+  volume	= {3},
+  year		= {2012}
+}
+
+@InBook{	  starke2021degree,
+  address	= {Cambridge},
+  author	= {de Clerq, Karen and Caha, Pavel and Starke, Michael and
+		  van den Wyngaerd, Guido},
+  booktitle	= {The Wiley Blackwell Companion to Morphology},
+  publisher	= {Wiley},
+  title		= {Degree Morphology},
+  year		= {2021}
+}
+
+@Article{	  starke2011parameters,
+  author	= {Starke, Michael},
+  journal	= {Workshop on parameters},
+  title		= {Towards an elegant solution to language variation:
+		  Variation reduces to the size of lexically stored trees},
+  year		= {2011}
+}
+
+@Article{	  starke2014clean,
+  author	= {Starke, Michael},
+  journal	= {Linguistic Analysis},
+  pages		= {245--256},
+  title		= {Cleaning up the lexicon},
+  volume	= {39},
+  year		= {2014}
+}
+
 @Article{	  corver2021adverbial,
   author	= {Corver, Norbert},
   journal	= {Natural Language \& Linguistic Theory},
