--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,53 @@
 
+@Article{	  kim2011applicatives,
+  author	= {Kim, Kyumin},
+  journal	= {Lingua},
+  number	= {3},
+  pages		= {487--510},
+  title		= {High applicatives in Korean causatives and passives},
+  volume	= {121},
+  year		= {2011}
+}
+
+@InBook{	  fabregas2020dative,
+  address	= {Berlin},
+  author	= {F{\'a}bregas, Antonio and Mar{\'i}n, Rafael},
+  booktitle	= {Dative constructions in Romance and beyond},
+  editor	= {Pineda, Anna and Mateu, Jaume},
+  pages		= {221-238},
+  publisher	= {Language Science Press},
+  title		= {Datives and stativity in psych predicates},
+  year		= {2020}
+}
+
+@InBook{	  cuervo2020dative,
+  address	= {Berlin},
+  author	= {Cuervo, Mar{\'i}a Cristina},
+  booktitle	= {Dative constructions in Romance and beyond},
+  editor	= {Pineda, Anna and Mateu, Jaume},
+  pages		= {1-39},
+  publisher	= {Language Science Press},
+  title		= {Datives as applicatives},
+  year		= {2020}
+}
+
+@Book{		  pineda2020datives,
+  address	= {Berlin},
+  editor	= {Pineda, Anna and Mateu, Jaume},
+  pages		= {440},
+  publisher	= {Language Science Press},
+  title		= {Dative constructions in Romance and beyond},
+  year		= {2020}
+}
+
+@PhDThesis{	  cuervo2003datives,
+  address	= {Cambridge, Mass},
+  author	= {Cuervo, Mar{\'i}a Cristina},
+  school	= {MIT},
+  title		= {Datives at large},
+  year		= {2003}
+}
+
 @Article{	  fodor1999,
   author	= {Fodor, Jerry and Lepore, Ernie},
   journal	= {Linguistic Inquiry},
