--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,120 @@
 
+@Article{	  rosello2008specificational,
+  author	= {Joana, Rosell{\'o}.},
+  journal	= {Journal of Portuguese Linguistics},
+  number	= {2},
+  pages		= {109--150},
+  title		= {Some arguments against some prevalent ideas on
+		  speci!cational sentences},
+  volume	= {7},
+  year		= {2008}
+}
+
+@PhDThesis{	  kobele2006copies,
+  address	= {Los Angeles},
+  author	= {Kobele, Gregory M.},
+  pages		= {282},
+  school	= {UCLA},
+  title		= {Generating copies: An investigation into structural
+		  identity in language and grammar},
+  year		= {2006}
+}
+
+@Article{	  wu2009classifiert,
+  author	= {Wu, Yicheng and Bodomo, Adams},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {487--503},
+  title		= {Classifiers $≠$ Determiners},
+  volume	= {40},
+  year		= {2009}
+}
+
+@InBook{	  montoloio1999condicionales,
+  address	= {Madrid},
+  author	= {Montol{\'i}o Dur{\'a}n, Estrella},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  publisher	= {RAE Espasa},
+  title		= {Condicionales},
+  year		= {1999}
+}
+
+@InBook{	  bustos1999derivacion,
+  address	= {Madrid},
+  author	= {Santiago Lacuesta, Ram{\'o}n and Bustos Gisbert, Eugenio},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  pages		= {4505-4593},
+  publisher	= {RAE Espasa},
+  title		= {La derivaci{\'o}n nominal},
+  year		= {1999}
+}
+
+@Book{		  zifonun1997grammatik,
+  author	= {Zifonun, Gisela and Hoffmann, Ludger and Strecker, Bruno
+		  and Brausse, Ursula and Ballweg, Joachim},
+  pages		= {2569},
+  publisher	= {Walter de Gruyter},
+  title		= {Grammatik der deutschen Sprache},
+  year		= {1997}
+}
+
+@Book{		  allott2021companionchomsky,
+  author	= {Allott, Nicholas and Lohndal, Terje and Rey, Georges},
+  pages		= {640},
+  publisher	= {John Wiley and Sons},
+  title		= {A Companion to Chomsky},
+  year		= {2021}
+}
+
+@InBook{	  gaertner2006speech,
+  address	= {Berlin},
+  author	= {G{\"a}rtner, Hans-Martin and Steinbach, Markus},
+  booktitle	= {Form, Structure, Grammar},
+  editor	= {Brandt, Patrick and {\ss}us, Eric},
+  pages		= {213-222},
+  publisher	= {Akademie-Verlag},
+  title		= {A Skeptical Note on the Syntax of Speech Acts and Point of
+		  View},
+  year		= {2006}
+}
+
+@PhDThesis{	  mitchell1986point,
+  address	= {Amherst, Mass},
+  author	= {Mitchell, Jonathan Edward},
+  school	= {Universtiy of Massachusetts},
+  title		= {The Formal Semantics of Point of View},
+  year		= {1986}
+}
+
+@Article{	  gutierrez-rexach2014gender,
+  author	= {Guti{\'e}rrez-Rexach, Javier and Sessarego, Sandro},
+  journal	= {Lingua},
+  pages		= {142--161},
+  title		= {Morphosyntactic variation and gender agreement in three
+		  Afro-Andean dialects},
+  volume	= {151},
+  year		= {2014}
+}
+
+@Article{	  fabregas2014variation,
+  author	= {F{\'a}bregas, Antonio and Gallego, {\'A}ngel J.},
+  journal	= {Lingua},
+  pages		= {97--119},
+  title		= {Morphological variation in Spanish},
+  volume	= {151},
+  year		= {2014}
+}
+
+@Book{		  gallego2018variation,
+  author	= {Gallego, {\'A}ngel J.},
+  pages		= {400},
+  publisher	= {Oxford Studies in Comparative},
+  title		= {The Syntactic Variation of Spanish Dialects},
+  year		= {2018}
+}
+
 @Article{	  kim2011applicatives,
   author	= {Kim, Kyumin},
   journal	= {Lingua},
