--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,75 @@
 
+@Book{		  lohndal2014,
+  author	= {Lohndal, Terje},
+  pages		= {171},
+  publisher	= {Oxford University Press},
+  title		= {Phrase Structure and Argument Structure},
+  year		= {2014}
+}
+
+@Article{	  leivada2020grammatical,
+  author	= {Leivada, Evelina and Westergaard, Marit},
+  journal	= {Frontiers in Psychology},
+  title		= {Acceptable Ungrammatical Sentences, Unacceptable
+		  Grammatical Sentences, and the Role of the Cognitive
+		  Parser},
+  volume	= {11},
+  year		= {2020}
+}
+
+@Book{		  bosque1996repaso,
+  address	= {Madrid},
+  author	= {Bosque, Ignacio},
+  pages		= {91},
+  publisher	= {Arco Libros},
+  title		= {Repaso de sintaxis tradicional: ejercicios de
+		  autocomprobaci{\'o}n},
+  volume	= {Cuadernos de Lengua Espa{\~n}ola},
+  year		= {1996}
+}
+
+@Book{		  bosque1980problemas,
+  address	= {Madrid},
+  author	= {Bosque, Ignacio.},
+  pages		= {133},
+  publisher	= {Editorial de la Universidad Complutense},
+  title		= {Problemas de morfosintaxis: ejercicios de gram{\'a}tica
+		  espa{\~n}ola para estudiantes universitarios},
+  year		= {1980}
+}
+
+@Book{		  tullio2012gramatica,
+  address	= {Montevideo (Uruguay)},
+  author	= {Tullio, Angela Di and Malcuori, Marisa},
+  pages		= {443},
+  publisher	= {ANEP},
+  title		= {Gram{\'a}tica del espanol para maestros y profesores del
+		  Uruguay},
+  year		= {2012}
+}
+
+@Article{	  elbourne2021presuppositionelbourne2021presupposition.pdf,
+  author	= {Elbourne, Paul},
+  journal	= {Linguistics and Philosophy},
+  number	= {6},
+  pages		= {1215--1253},
+  title		= {Presupposition, assertion, and definite descriptions},
+  volume	= {44},
+  year		= {2021}
+}
+
+@Article{	  clapp2021negative,
+  author	= {Clapp, Lenny},
+  journal	= {Linguistics and Philosophy},
+  number	= {6},
+  pages		= {1281--1315},
+  title		= {Negative existentials as corrections: a partial solution
+		  to the problem of negative existentials in segmented
+		  discourse representation theory},
+  volume	= {44},
+  year		= {2021}
+}
+
 @Article{	  rosello2008specificational,
   author	= {Joana, Rosell{\'o}.},
   journal	= {Journal of Portuguese Linguistics},
@@ -18,16 +89,6 @@
   title		= {Generating copies: An investigation into structural
 		  identity in language and grammar},
   year		= {2006}
-}
-
-@Article{	  wu2009classifiert,
-  author	= {Wu, Yicheng and Bodomo, Adams},
-  journal	= {Linguistic Inquiry},
-  number	= {3},
-  pages		= {487--503},
-  title		= {Classifiers $≠$ Determiners},
-  volume	= {40},
-  year		= {2009}
 }
 
 @InBook{	  montoloio1999condicionales,
