--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@InBook{	  phillips2011illusions,
+  address	= {Bingley},
+  author	= {Phillips, Colin and Wagers, Matthew W. and Lau, Ellen F.},
+  booktitle	= {Syntax and Semantics 37: Experiments at the Interfaces},
+  editor	= {Runner, Jeffrey},
+  pages		= {147-180},
+  publisher	= {Emerald Group Publishing},
+  title		= {Grammatical Illusions and Selective Fallibility in
+		  Real-Time Language Comprehension},
+  year		= {2011}
+}
+
+@Article{	  otero1972acceptable,
+  author	= {Otero, Carlos},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {233--242},
+  title		= {Acceptable Ungrammatical Sentences in Spanish},
+  volume	= {3},
+  year		= {1972}
+}
+
+@PhDThesis{	  montalbetti1984after,
+  address	= {Cambridge, Mass},
+  author	= {Montalbetti, Mario},
+  school	= {Massachusetts Institute of Technology},
+  title		= {After Binding: On the interpretation of pronouns},
+  year		= {1984}
+}
+
 @Book{		  lohndal2014,
   author	= {Lohndal, Terje},
   pages		= {171},
