--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,27 @@
 
+@Article{	  bochnak2021clausal,
+  author	= {Bochnak, M. Ryan and Hanink, Emily A.},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {Clausal embedding in Washo: Complementation vs.
+		  modification},
+  year		= {2021}
+}
+
+@PhDThesis{	  cheng2021copulashi,
+  address	= {Leiden},
+  author	= {Cheng, Hang},
+  school	= {Leiden University},
+  title		= {All structures great and small: On copular sentences with
+		  sh{\`\i} in Chinese},
+  year		= {2021}
+}
+
+@Article{	  coppock2021formal,
+  author	= {Coppock, Elizabeth and Champollion, Lucas},
+  title		= {Invitation to formal semantics},
+  year		= {2021}
+}
+
 @InBook{	  phillips2011illusions,
   address	= {Bingley},
   author	= {Phillips, Colin and Wagers, Matthew W. and Lau, Ellen F.},
