--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,14 @@
+@phdthesis{Cheng2021Copulashi,
+author = {Cheng, Hang}, 
+title = {All structures great and small: On copular sentences with shì in Chinese}, 
+school = {Leiden University}, 
+address = {Leiden}, 
+pages = {}, 
+year = {2021}, 
+abstract = {}, 
+keywords = {copula; copulative sentence}}
+
+
 @InBook{Dobrovie-Sorin2012Existential,
 author = {Dobrovie-Sorin, Carmen and Beyssade, Claire}, 
 title = {Existential Sentences}, 
