--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  puskar2018agreement,
+  author	= {Pu{\v s}kar, Zorica},
+  journal	= {Syntax},
+  number	= {3},
+  pages		= {275--318},
+  title		= {Interactions of Gender and Number Agreement: Evidence from
+		  Bosnian/Croatian/Serbian},
+  volume	= {21},
+  year		= {2018}
+}
+
 @Article{	  bochnak2021clausal,
   author	= {Bochnak, M. Ryan and Hanink, Emily A.},
   journal	= {Natural Language \& Linguistic Theory},
