result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,76 @@
+@Article{Zangwill1995Beautiful,
+author = {Zangwill, Nick}, 
+title = {The Beautiful, The Dainty And The Dumpy}, 
+journal = {The British Journal of Aesthetics}, 
+volume = {35}, 
+number = {4}, 
+pages = {317–329}, 
+year = {1995}, 
+abstract = {}, 
+location = {}, 
+keywords = {Aesthetic adjectives; Evaluative; Subjective}}
+
+
+
+
+@Article{Liao2017Aesthetic,
+author = {Liao, Shen-yi and Meskin, Aaron}, 
+title = {Aesthetic Adjectives: Experimental Semantics and Context-Sensitivity}, 
+journal = {Philosophy and Phenomenological Research}, 
+volume = {94}, 
+number = {2}, 
+pages = {371–398}, 
+year = {2017}, 
+abstract = {}, 
+location = {}, 
+keywords = {Aesthetic adjectives; Evaluative; Subjectivity; adjectives}}
+
+
+
+
+@Article{Sibley1959Aesthetic,
+author = {Sibley, Frank}, 
+title = {Aesthetic Concepts}, 
+journal = {The Philosophical Review}, 
+volume = {68}, 
+number = {4}, 
+pages = {421}, 
+year = {1959}, 
+abstract = {}, 
+location = {}, 
+keywords = {Aesthetic adjectives; adjectives; subjectivity}}
+
+
+
+
+@Article{Rett2007Antonymity,
+author = {Rett, Jessica}, 
+title = {Antonymy and Evaluativity}, 
+journal = {Semantics and Linguistic Theory}, 
+volume = {17}, 
+number = {}, 
+pages = {210}, 
+year = {2007}, 
+abstract = {}, 
+location = {}, 
+keywords = {Evaluative; subjectivity; subjectiviy}}
+
+
+
+
+@InBook{Umbach2006Evaluative,
+author = {Umbach, Carla}, 
+title = {Evaluative propositions and subjective judgments}, 
+booktitle = {Subjective Meaning}, 
+editor = {}, 
+publisher = {De Gruyter}, 
+address = {Berlin, Boston}, 
+pages = {}, 
+year = {2006}, 
+abstract = {}, 
+keywords = {Aesthetic adjectives; Subjective; Subjectivity}}
+
+
 @phdthesis{Cheng2021Copulashi,
 author = {Cheng, Hang}, 
 title = {All structures great and small: On copular sentences with shì in Chinese}, 
