--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,53 @@
 
+@Article{	  zangwill1995beautiful,
+  author	= {Zangwill, Nick},
+  journal	= {The British Journal of Aesthetics},
+  number	= {4},
+  pages		= {317--329},
+  title		= {The Beautiful, The Dainty And The Dumpy},
+  volume	= {35},
+  year		= {1995}
+}
+
+@Article{	  liao2017aesthetic,
+  author	= {Liao, Shen-yi and Meskin, Aaron},
+  journal	= {Philosophy and Phenomenological Research},
+  number	= {2},
+  pages		= {371--398},
+  title		= {Aesthetic Adjectives: Experimental Semantics and
+		  Context-Sensitivity},
+  volume	= {94},
+  year		= {2017}
+}
+
+@Article{	  sibley1959aesthetic,
+  author	= {Sibley, Frank},
+  journal	= {The Philosophical Review},
+  number	= {4},
+  pages		= {421},
+  title		= {Aesthetic Concepts},
+  volume	= {68},
+  year		= {1959}
+}
+
+@Article{	  rett2007antonymity,
+  author	= {Rett, Jessica},
+  journal	= {Semantics and Linguistic Theory},
+  pages		= {210},
+  title		= {Antonymy and Evaluativity},
+  volume	= {17},
+  year		= {2007}
+}
+
+@InBook{	  umbach2006evaluative,
+  address	= {Berlin, Boston},
+  author	= {Umbach, Carla},
+  booktitle	= {Subjective Meaning},
+  publisher	= {De Gruyter},
+  title		= {Evaluative propositions and subjective judgments},
+  year		= {2006}
+}
+
 @Article{	  puskar2018agreement,
   author	= {Pu{\v s}kar, Zorica},
   journal	= {Syntax},
