--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@PhDThesis{	  soria2019value,
+  address	= {Paris},
+  author	= {Soria Ruiz, Andr{\'e}s},
+  school	= {{\'E}cole Normale Sup{\'e}rieure},
+  title		= {The Place of Value in Natural Language},
+  year		= {2019}
+}
+
+@Article{	  an2021closest,
+  author	= {An, Aixiu and Abeill{\'e}, Anne},
+  journal	= {Journal of French Language Studies},
+  pages		= {1--28},
+  title		= {Closest conjunct agreement with attributive adjectives},
+  year		= {2021}
+}
+
 @Article{	  zangwill1995beautiful,
   author	= {Zangwill, Nick},
   journal	= {The British Journal of Aesthetics},
