result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,75 @@
+@Article{Kanwit2020,
+author = {Kanwit, Matthew and Geeslin, Kimberly L.}, 
+title = {Sociolinguistic competence and interpreting variable structures in a second language}, 
+journal = {Studies in Second Language Acquisition}, 
+volume = {42}, 
+number = {4}, 
+pages = {775–799}, 
+year = {2020}, 
+keywords = {copula; copulative}}
+
+
+
+
+@Article{Keine2019Copula,
+author = {Keine, Stefan and Wagner, Michael and Coon, Jessica}, 
+title = {Hierarchy effects in copula constructions}, 
+journal = {Canadian Journal of Linguistics}, 
+volume = {64}, 
+number = {4}, 
+pages = {617–648}, 
+year = {2019}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; copulative; specificational}}
+
+
+
+
+@Article{Boneh2019,
+author = {Boneh, Norah}, 
+title = {Dispositions and characterizing sentences}, 
+journal = {Glossa}, 
+volume = {4}, 
+number = {1}, 
+pages = {1–20}, 
+year = {2019}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; copulative; dispositional sentences}}
+
+
+
+
+@Article{Padure2018,
+author = {Padure, Cristian and de Pascale, Stefano and Adamou, Evangelia}, 
+title = {Variation between the copula si to be and the {l}-clitics in {R}omani spoken in Mexico}, 
+journal = {Romani Studies}, 
+volume = {28}, 
+number = {2}, 
+pages = {263–292}, 
+year = {2018}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; copulative}}
+
+
+
+
+@Article{Berry2017AAE,
+author = {Berry, Jessica R. and Oetting, Janna B.}, 
+title = {Dialect Variation of Copula and Auxiliary Verb {BE}: {A}frican {A}merican {E}nglish-Speaking Children With and Without {G}ullah-{G}eechee Heritage}, 
+journal = {Journal of Speech, Language and Hearing Research}, 
+volume = {60}, 
+number = {9}, 
+pages = {2557–2568}, 
+year = {2017}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; copulative}}
+
+
+
 @Article{Zangwill1995Beautiful,
 author = {Zangwill, Nick}, 
 title = {The Beautiful, The Dainty And The Dumpy}, 
