--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,49 @@
 
+@Article{	  kanwit2020,
+  author	= {Kanwit, Matthew and Geeslin, Kimberly L.},
+  journal	= {Studies in Second Language Acquisition},
+  number	= {4},
+  pages		= {775--799},
+  title		= {Sociolinguistic competence and interpreting variable
+		  structures in a second language},
+  volume	= {42},
+  year		= {2020}
+}
+
+@Article{	  boneh2019,
+  author	= {Boneh, Norah},
+  journal	= {Glossa},
+  number	= {1},
+  pages		= {1--20},
+  title		= {Dispositions and characterizing sentences},
+  volume	= {4},
+  year		= {2019}
+}
+
+@Article{	  padure2018,
+  author	= {Padure, Cristian and de Pascale, Stefano and Adamou,
+		  Evangelia},
+  journal	= {Romani Studies},
+  number	= {2},
+  pages		= {263--292},
+  title		= {Variation between the copula si to be and the {l}-clitics
+		  in {R}omani spoken in Mexico},
+  volume	= {28},
+  year		= {2018}
+}
+
+@Article{	  berry2017aae,
+  author	= {Berry, Jessica R. and Oetting, Janna B.},
+  journal	= {Journal of Speech, Language and Hearing Research},
+  number	= {9},
+  pages		= {2557--2568},
+  title		= {Dialect Variation of Copula and Auxiliary Verb {BE}:
+		  {A}frican {A}merican {E}nglish-Speaking Children With and
+		  Without {G}ullah-{G}eechee Heritage},
+  volume	= {60},
+  year		= {2017}
+}
+
 @PhDThesis{	  soria2019value,
   address	= {Paris},
   author	= {Soria Ruiz, Andr{\'e}s},
