--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Article{	  umbach2021eher,
+  author	= {Umbach, Carla and Solt, Stephanie},
+  journal	= {Journal of Semantics},
+  title		= {Comparison via eher},
+  year		= {2021}
+}
+
+@Article{	  vatrican2021saber,
+  author	= {Vatrican, Axelle},
+  journal	= {Crisol},
+  title		= {Sobre las preguntas encubiertas: el ejemplo de saber en
+		  espa{\~n}ol},
+  volume	= {19},
+  year		= {2021}
+}
+
 @Article{	  kanwit2020,
   author	= {Kanwit, Matthew and Geeslin, Kimberly L.},
   journal	= {Studies in Second Language Acquisition},
