--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,73 @@
 
+@InBook{	  wagers2022expersyntax,
+  author	= {Wagers, Matthew W.},
+  booktitle	= {The Open Handbook of Linguistic Data Management},
+  editor	= {Berez-Kroeker, Andrea L. and McDonnell, Bradley and
+		  Koller, Eve and Collister, Lauren B.},
+  publisher	= {The MIT Press},
+  title		= {Managing Experimental Data in a Study of Syntax},
+  year		= {2022}
+}
+
+@InBook{	  degen2022expesemantics,
+  author	= {Degen, Judtih and Tonhauser, Judith},
+  booktitle	= {The Open Handbook of Linguistic Data Management},
+  editor	= {Berez-Kroeker, Andrea L. and McDonnell, Bradley and
+		  Koller, Eve and Collister, Lauren B.},
+  publisher	= {The MIT Press},
+  title		= {Managing Web Experiments for Psycholinguistics: An Example
+		  from Experimental Semantics/Pragmatics},
+  year		= {2022}
+}
+
+@Article{	  lasnik2022,
+  author	= {Lasnik, Howard},
+  journal	= {Inference: International Review of Science},
+  number	= {4},
+  title		= {More Aspects of Aspects},
+  volume	= {6},
+  year		= {2022}
+}
+
+@Article{	  disciullo2021,
+  author	= {Di Sciullo, Anna Maria},
+  journal	= {Inference: International Review of Science},
+  number	= {2},
+  title		= {On Aspects of the Theory of Syntax},
+  volume	= {6},
+  year		= {2021}
+}
+
+@Article{	  leivada2022,
+  author	= {Leivada, Evelina},
+  journal	= {Inference: International Review of Science},
+  number	= {4},
+  title		= {Linguistics as Science, Language as Mystery},
+  volume	= {6},
+  year		= {2022}
+}
+
+@InBook{	  kim1969events,
+  address	= {Dordrecht},
+  author	= {Kim, Jaegwon},
+  booktitle	= {Essays in Honor of Carl G. Hempel},
+  pages		= {198-215},
+  publisher	= {Springer Netherlands},
+  title		= {Events and Their Descriptions: Some Considerations},
+  year		= {1969}
+}
+
+@InBook{	  kim1976exemplification,
+  address	= {Dordrecht},
+  author	= {Kim, Jaegwon},
+  booktitle	= {Action Theory},
+  editor	= {Brand, M. and Walton, D.},
+  pages		= {159-177},
+  publisher	= {Springer Netherlands},
+  title		= {Events as Property Exemplifications},
+  year		= {1976}
+}
+
 @Article{	  umbach2021eher,
   author	= {Umbach, Carla and Solt, Stephanie},
   journal	= {Journal of Semantics},
