--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Unpublished{	  kennedy2021counterstance,
+  author	= {Kennedy, Chris and Willer, Malte},
+  title		= {Familiarity Inferences, Subjective Attitudes and
+		  Counterstance Contingency: Towards a Pragmatic Theory of
+		  Subjective Meaning},
+  year		= {2021}
+}
+
 @InBook{	  wagers2022expersyntax,
   author	= {Wagers, Matthew W.},
   booktitle	= {The Open Handbook of Linguistic Data Management},
