--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,29 @@
 
+@InBook{	  syrett2006shifting,
+  address	= {Cambridge, Mass.},
+  author	= {Syrett, Kristen and Bradley, Evan and Kennedy, Chris and
+		  Lidz, Jeffrey},
+  booktitle	= {Proceedings of the Inaugural Conference on Generative
+		  Approaches to Language Acquisition - North America
+		  (GALANA), Honolulu, HI},
+  editor	= {Deen, Kamil Ud and Nomura, Jun and Schulz, Barbara and
+		  Schwartz, Bonnie},
+  publisher	= {UConn Occasional Papers in Linguistics},
+  title		= {Shifting Standards: Children's Understanding of Gradable
+		  Adjectives},
+  year		= {2006}
+}
+
+@Article{	  vangelderen2021whatfor,
+  author	= {van Gelderen, Elly},
+  journal	= {The Journal of Comparative Germanic Linguistics},
+  number	= {3},
+  pages		= {245--267},
+  title		= {Variations on what for in the history of English},
+  volume	= {24},
+  year		= {2021}
+}
+
 @Unpublished{	  kennedy2021counterstance,
   author	= {Kennedy, Chris and Willer, Malte},
   title		= {Familiarity Inferences, Subjective Attitudes and
