--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,32 @@
 
+@PhDThesis{	  george1980analogical,
+  address	= {Cambrigde, Mass.},
+  author	= {George, Leland M.},
+  school	= {Massachusetts Institute of Technology},
+  title		= {Analogical generalization in natural language syntax},
+  year		= {1980}
+}
+
+@Article{	  press2022better,
+  author	= {Press, Clare and Yon, Daniel and Heyes, Cecilia},
+  journal	= {Current Biology},
+  number	= {1},
+  pages		= {R13--R17},
+  title		= {Building better theories},
+  volume	= {32},
+  year		= {2022}
+}
+
+@Article{	  villalta2022islands,
+  author	= {Villata, Sandra and Tabor, Whitney},
+  journal	= {Cognition},
+  number	= {104943},
+  title		= {A self-organized sentence processing theory of gradience:
+		  The case of islands},
+  volume	= {222},
+  year		= {2022}
+}
+
 @InBook{	  syrett2006shifting,
   address	= {Cambridge, Mass.},
   author	= {Syrett, Kristen and Bradley, Evan and Kennedy, Chris and
