--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Article{	  lund2020concessive,
+  author	= {Lund, Gunnar and Charnavel, Isabelle},
+  journal	= {University of Pennsylvania Working Papers in Linguistics},
+  number	= {1},
+  title		= {The Syntax of Concessive Clauses: Evidence from Exempt
+		  Anaphora},
+  volume	= {26}
+}
+
+@Article{	  jedrzejowski2021,
+  author	= {J{\k e}drzejowski, {\L}ukasz},
+  journal	= {Glossa: a journal of general linguistics},
+  title		= {On the synchrony, variation and diachrony of adverbial
+		  exceptive clauses in Polish},
+  year		= {2021}
+}
+
 @PhDThesis{	  george1980analogical,
   address	= {Cambrigde, Mass.},
   author	= {George, Leland M.},
