--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -5,7 +5,8 @@
   number	= {1},
   title		= {The Syntax of Concessive Clauses: Evidence from Exempt
 		  Anaphora},
-  volume	= {26}
+  volume	= {26},
+  year		= {2020}
 }
 
 @Article{	  jedrzejowski2021,
@@ -47977,7 +47978,7 @@
   author	= {Goodhue, Daniel},
   journal	= {Semantics and Pragmatics},
   number	= {0},
-  title		= {Must φ is felicitous only if φ is not known},
+  title		= {Must $\phi$ is felicitous only if $\phi$ is not known},
   volume	= {10},
   year		= {2017},
   doi		= {10.3765/sp.10.14}
