--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,10 @@
 
+@Unpublished{	  collins2022argument,
+  author	= {Collins, Chris},
+  title		= {Principles of Argument Structure: A Merge-Based Approach},
+  year		= {2022}
+}
+
 @Article{	  lund2020concessive,
   author	= {Lund, Gunnar and Charnavel, Isabelle},
   journal	= {University of Pennsylvania Working Papers in Linguistics},
