--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  willer2017advice,
+  author	= {Willer, Malte},
+  journal	= {Pacific Philosophical Quarterly},
+  pages		= {174--207},
+  title		= {Advice for Noncognitivists},
+  volume	= {98},
+  year		= {2017}
+}
+
 @Unpublished{	  collins2022argument,
   author	= {Collins, Chris},
   title		= {Principles of Argument Structure: A Merge-Based Approach},
