--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@Book{		  williams2015arguments,
+  address	= {Cambridge},
+  author	= {Williams, Alexander},
+  pages		= {393},
+  publisher	= {Cambridge University Press},
+  title		= {Arguments in Syntax and Semantics},
+  year		= {2015}
+}
+
+@InBook{	  bach1994slack,
+  address	= {London},
+  author	= {Bach, Kent},
+  booktitle	= {Foundations of Speech Act Theory},
+  editor	= {Tsohatzidis, Savas L.},
+  publisher	= {Routledge},
+  title		= {{SEMANTIC SLACK}: What is said and more},
+  year		= {1994}
+}
+
+@Article{	  mittwoch1982eating,
+  author	= {Mittwoch, Anita},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {113--122},
+  title		= {On the Difference between Eating and Eating Something:
+		  Activities versus Accomplishments},
+  volume	= {13},
+  year		= {1982}
+}
+
 @Article{	  willer2017advice,
   author	= {Willer, Malte},
   journal	= {Pacific Philosophical Quarterly},
