--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,44 @@
 
+@Article{	  collins2021interview,
+  author	= {Collins, Chris},
+  title		= {A Conversation with Noam Chomsky about Formal Semantics},
+  year		= {2021}
+}
+
+@Unpublished{	  collins2020morphology,
+  author	= {Collins, Chris and Kayne, Richard S.},
+  title		= {Towards a Theory of Morphology as Syntax},
+  year		= {2020}
+}
+
+@Article{	  barker2013taste,
+  author	= {Barker, Chris},
+  journal	= {Inquiry},
+  number	= {2-3},
+  pages		= {240--257},
+  title		= {Negotiating Taste},
+  volume	= {56},
+  year		= {2013}
+}
+
+@Book{		  kolbel2002truth,
+  author	= {K{\"o}lbel, Max},
+  pages		= {150},
+  publisher	= {Psychology Press},
+  title		= {Truth Without Objectivity},
+  year		= {2002}
+}
+
+@InBook{	  demonte1986predication,
+  author	= {Demonte, Violeta},
+  booktitle	= {Generative Studies in Spanish syntax},
+  editor	= {Bordelois, Yvonne and Contreras, Heles and Zagona, Karen},
+  pages		= {51-66},
+  publisher	= {De Gruyter Mouton},
+  title		= {Predication and passive},
+  year		= {1986}
+}
+
 @Book{		  williams2015arguments,
   address	= {Cambridge},
   author	= {Williams, Alexander},
