--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,28 @@
 
+@Book{		  gelderen2021third,
+  author	= {van Gelderen, Elly},
+  pages		= {220},
+  publisher	= {Cambridge University Press},
+  title		= {Third Factors in Language Variation and Change},
+  year		= {2021}
+}
+
+@Article{	  stigliano2022p,
+  author	= {Stigliano, Laura},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {P-omission in ellipsis in Spanish: Evidence for syntactic
+		  identity},
+  year		= {2022}
+}
+
+@Article{	  munoz2022doubling,
+  author	= {Mu{\~n}oz P{\'e}rez, Carlos and Verdecchia, Mat{\'i}as},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {Predicate doubling in Spanish: On how discourse may mimic
+		  syntactic movement},
+  year		= {2022}
+}
+
 @Article{	  collins2021interview,
   author	= {Collins, Chris},
   title		= {A Conversation with Noam Chomsky about Formal Semantics},
@@ -33058,7 +33082,7 @@
 }
 
 @Article{	  gelderen2013null-subjects-in-old,
-  author	= {Gelderen, Elly van},
+  author	= {van Gelderen, Elly},
   journal	= {Linguistic Inquiry},
   number	= {2},
   pages		= {271--285},
@@ -45830,7 +45854,7 @@
 
 @Book{		  gelderen2013clause-structure,
   address	= {Cambridge},
-  author	= {Gelderen, Elly van},
+  author	= {van Gelderen, Elly},
   publisher	= {Cambridge University Press},
   title		= {Clause structure},
   year		= {2013}
@@ -49005,7 +49029,7 @@
 
 @Book{		  gelderen2010an-introduction,
   address	= {Amsterdam ; Philadelphia},
-  author	= {Gelderen, Elly van},
+  author	= {van Gelderen, Elly},
   edition	= {Rev. ed., [2nd ed.]},
   publisher	= {John Benjamins Pub. Co},
   title		= {An introduction to the grammar of {English}},
@@ -54489,7 +54513,7 @@
 
 @Book{		  gelderen2017syntax-an-intr,
   address	= {Amsterdam; Philadelphia},
-  author	= {Gelderen, Elly van},
+  author	= {van Gelderen, Elly},
   publisher	= {John Benjamins Publishing Company},
   title		= {Syntax: an introduction to minimalism},
   year		= {2017}
@@ -54782,7 +54806,7 @@
 }
 
 @InCollection{	  gelderen2011the-pronominal-,
-  author	= {Gelderen, Elly van},
+  author	= {van Gelderen, Elly},
   booktitle	= {The Linguistic Cycle: Language Change and the Language
 		  Faculty},
   publisher	= {Oxford University Press},
